force-app/main/default/objects/EMS_Employee_referral__c/EMS_Employee_referral__c.object-meta.xml
<CustomObject>
    <label>Employee Referral</label>
    <nameField>
        <label>Referral Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Employee Referrals</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>