force-app/main/default/objects/EMS_Employee_referral__c/fields/Job_Application__c.field-meta.xml
<CustomField>
    <fullName>Job_Application__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Job Application</label>
    <referenceTo>EMS_RM_Job_Application__c</referenceTo>
    <relationshipLabel>Employee Referrals</relationshipLabel>
    <relationshipName>Employee_Referrals</relationshipName>
    <type>Lookup</type>
</CustomField>