force-app/main/default/objects/EMS_Employee_referral__c/fields/Job_Opening__c.field-meta.xml
<CustomField>
    <fullName>Job_Opening__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Job Opening</label>
    <referenceTo>EMS_Job_Opening__c</referenceTo>
    <relationshipLabel>Employee Referrals</relationshipLabel>
    <relationshipName>Employee_Referrals</relationshipName>
    <type>Lookup</type>
</CustomField>