force-app/main/default/objects/EMS_Employee_referral__c/fields/Resource_Referred_By__c.field-meta.xml
<CustomField>
    <fullName>Resource_Referred_By__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Resource Referred By</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Employee Referrals</relationshipLabel>
    <relationshipName>Employee_Referrals</relationshipName>
    <type>Lookup</type>
</CustomField>